tests/compile_fail/effectful_transform_input_mismatch.stderr
error[E0277]: the effectful transform handler's `Input` does not match the stage arrow input
  --> tests/compile_fail/effectful_transform_input_mismatch.rs:20:13
   |
20 |       let _ = obzenflow_dsl::effectful_transform!(
   |  _____________^
21 | |         OtherInput -> First => FirstOnly,
22 | |         effects: [],
23 | |         middleware: []
24 | |     );
   | |     ^
   | |     |
   | |_____this handler cannot consume the fact type declared before `->`
   |       required by a bound introduced by this call
   |
help: the trait `EffectfulTransformInputMatchesArrow<OtherInput>` is not implemented for `support::Input`
  --> tests/compile_fail/support/typed_effectful.rs
   |
   | pub struct Input;
   | ^^^^^^^^^^^^^^^^
   = note: the handler's `type Input` is authoritative: use that fact type before `->`, or attach a handler whose `Input` matches the arrow (FLOWIP-120z B9)
note: required by a bound in `__obzenflow_assert_effectful_transform_contract`
  --> tests/compile_fail/effectful_transform_input_mismatch.rs:20:13
   |
20 |       let _ = obzenflow_dsl::effectful_transform!(
   |  _____________^
21 | |         OtherInput -> First => FirstOnly,
22 | |         effects: [],
23 | |         middleware: []
24 | |     );
   | |     ^
   | |     |
   | |_____required by a bound in this function
   |       required by this bound in `__obzenflow_assert_effectful_transform_contract`
   = note: this error originates in the macro `$crate::__obzenflow_assert_effectful_transform_contract` which comes from the expansion of the macro `obzenflow_dsl::effectful_transform` (in Nightly builds, run with -Z macro-backtrace for more info)
